# Satcli

./: .env  .gitignore  README.md  bulkSteam.py  docker-compose.extra.yml  docker-compose.initialize.yml  docker-compose.yml  import.py  mariadb.sh  psql.sh  requirement.txt  test.py
config/: airflow.cfg  pg_hba.conf  rabbitmq.conf
dags/: task_queue.py  todo_list.py  update_module.py
docker/airflow/: Dockerfile  airflow.cfg  flower.sh  initialize.sh  lib.sh  rabbitmq.py  scheduler.sh  webui.sh  worker.sh
docker/elasticsearch/: elasticsearch.yml
satcli/: __init__.py  mariadb.py  schema.sql  steamapi.py
sql/: 10-users.sh  20-schema.sql  schema.sql
src/: pyproject.toml
src/steampowered/: __init__.py  queue.py  todo_list.py
