[project]
name = "steampowered"
description = "A test project, supposed to analyse some users comment's found on steam."
version = "1.0.0"
requires-python = ">=3.10"
authors = [
    { name = "Brice Boutillon"  }
]
dependencies = [
    "psycopg2-binary>=2.9.0",
    "SQLAlchemy >= 1.4.0",
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
tests = []

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

#[tool.setuptools.packages.find]
#include = ['pyliad.*']

[tool.distutils.bdist_wheel]
universal = true

